force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Coordinate_Y__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Coordinate_Y__c</fullName>
    <label>Coordinate Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>