force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Custom_Upsert_Record_Handling__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Custom_Upsert_Record_Handling__c</fullName>
    <label>Upsert Record Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual External ID</fullName>
                <default>true</default>
                <label>Virtual External ID</label>
            </value>
            <value>
                <fullName>Standard Upsert</fullName>
            </value>
            <value>
                <fullName>Match First Found</fullName>
            </value>
            <value>
                <fullName>Skip Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>