force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Data_Set_VCS_Repo_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set_VCS_Repo_Folder_Path__c</fullName>
    <formula>PDRI__Data_Set_VCS_Repo_Folder__r.PDRI__Path__c</formula>
    <label>Data Set VCS Repo Folder Path</label>
    <type>Text</type>
</CustomField>