force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Destination_Schema_Org__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destination_Schema_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Schema Org</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipLabel>Data Sets (Destination Schema Org)</relationshipLabel>
    <relationshipName>Data_Sets2</relationshipName>
    <type>Lookup</type>
</CustomField>