force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Ignore_Namespace__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Ignore_Namespace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Namespace</label>
    <type>Checkbox</type>
</CustomField>