force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Layout_Type__c</fullName>
    <label>Layout Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>