force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Query_Filter__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Query_Filter__c</fullName>
    <label>Query Filter</label>
    <length>950</length>
    <type>LongTextArea</type>
</CustomField>