force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Root__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Root__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Root</label>
    <type>Checkbox</type>
</CustomField>