force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Root_Data_Set__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Root_Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set Root</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>