force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__VCS_Repo_Folder__c.field-meta.xml
<CustomField>
    <fullName>PDRI__VCS_Repo_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCS Repo Folder</label>
    <referenceTo>PDRI__VCS_Repo_Folder__c</referenceTo>
    <relationshipName>Data_Sets_VCS_Repo_Folder</relationshipName>
    <type>Lookup</type>
</CustomField>