force-app/main/default/objects/PDRI__DataSet__c/listViews/Audley_DS.listView-meta.xml
<ListView>
    <fullName>Audley_DS</fullName>
    <columns>NAME</columns>
    <columns>PDRI__Active__c</columns>
    <columns>PDRI__Data_Set_Name__c</columns>
    <columns>PDRI__Replicate_Record_Type__c</columns>
    <columns>PDRI__ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDRI__Data_Set_Name__c</field>
        <operation>contains</operation>
        <value>Audley</value>
    </filters>
    <label>Audley</label>
</ListView>