force-app/main/default/objects/PDRI__DataSet__c/listViews/PDRI__Root_Data_Sets.listView-meta.xml
<ListView>
    <fullName>PDRI__Root_Data_Sets</fullName>
    <columns>PDRI__Data_Set_Name__c</columns>
    <columns>PDRI__Folder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDRI__ObjectName__c</columns>
    <columns>PDRI__Root__c</columns>
    <columns>PDRI__Active__c</columns>
    <columns>PDRI__Origin_Connection__c</columns>
    <columns>PDRI__Use_Local_Schema__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDRI__Root__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Data Sets (Root Elements)</label>
</ListView>